--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,12 @@
 ---
 
-nginxlog_exporter_version: 1.3.0
+nginxlog_exporter_version: 1.9.2
 nginxlog_exporter_listen_address: 0.0.0.0
 nginxlog_exporter_listen_port: 4040
 
-nginxlog_exporter_download_url: https://github.com/martin-helmich/prometheus-nginxlog-exporter/releases/download/v{{ nginxlog_exporter_version }}/prometheus-nginxlog-exporter
+nginxlog_exporter_download_url: "https://github.com/martin-helmich/prometheus-nginxlog-exporter/releases/download/v{{ nginxlog_exporter_version }}/{{ nginxlog_exporter_archive_name }}"
+nginxlog_exporter_archive_name: "{{ nginxlog_exporter_extracted_file }}_{{ nginxlog_exporter_version }}_linux_amd64.tar.gz"
+nginxlog_exporter_extracted_file: prometheus-nginxlog-exporter
 
 nginxlog_exporter_force_install: false
 
@@ -15,11 +17,12 @@ nginxlog_exporter_shared_dir: "{{ nginxlog_exporter_root_dir }}/shared"
 nginxlog_exporter_user: nginxlog-exp
 nginxlog_exporter_group: "{{ nginxlog_exporter_user }}"
 
+nginxlog_exporter_config_template: config.yaml.j2
 # see https://github.com/martin-helmich/prometheus-nginxlog-exporter#configuration-file
-nginxlog_exporter_config_vars: |
+nginxlog_exporter_config_vars:
   listen:
-    port: {{ nginxlog_exporter_listen_port }}
-    address: {{ nginxlog_exporter_listen_address }}
+    port: "{{ nginxlog_exporter_listen_port }}"
+    address: "{{ nginxlog_exporter_listen_address }}"
   namespaces:
     - name: nginx
       format: "$remote_addr [$time_local] \"$request\" $status $body_bytes_sent $request_time $upstream_response_time"
